--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  shared_preferences: ^2.0.10
+  jwt_decoder: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
