--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image: ^4.1.3
   http: ^0.13.3
   shared_preferences: ^2.0.10
   jwt_decoder: ^2.0.1
